--- a/dev/04_Development/demo02/docker-compose.yml
+++ b/dev/04_Development/demo02/docker-compose.yml
@@ -18,8 +18,8 @@ services:
     ports:
       - "3000:3000"
     volumes:
-      - .:/home/node/app
-      - node_modules:/home/node/app/node_modules
+      - .:/usr/src/app
+      - node_modules:/usr/src/app/node_modules
     networks:
       - app-network
     command: ./wait-for.sh db:27017 -- /home/node/app/node_modules/.bin/nodemon server.js
@@ -44,3 +44,4 @@ networks:
 volumes:
   dbdata:
   node_modules:
+
