--- a/dev/04_Development/demo02/Dockerfile
+++ b/dev/04_Development/demo02/Dockerfile
@@ -17,6 +17,9 @@ RUN npm install
 
 COPY --chown=node:node . .
 
+# Building the website
+RUN ./node_modules/.bin/ng build
+
 # Add metadata to the image to describe which port the container is listening on at runtime.
 EXPOSE 3000
 
