--- a/dev/04_Development/demo02/docker-compose.yml
+++ b/dev/04_Development/demo02/docker-compose.yml
@@ -17,9 +17,9 @@ services:
       - MONGO_DB=$MONGO_DB
     ports:
       - "3000:3000"
-    volumes:
-      - .:/usr/src/app
-      - node_modules:/usr/src/app/node_modules
+#    volumes:
+#      - .:/usr/src/app
+#      - node_modules:/usr/src/app/node_modules
     networks:
       - app-network
     command: ./wait-for.sh db:27017 -- /home/node/app/node_modules/.bin/nodemon server.js
@@ -43,5 +43,5 @@ networks:
 
 volumes:
   dbdata:
-  node_modules:
+#  node_modules:
 
