--- a/dev/04_Development/demo02/.gitignore
+++ b/dev/04_Development/demo02/.gitignore
@@ -11,6 +11,12 @@
 # dependencies
 /node_modules
 
+# idea
+**/.idea
+
+# data bases
+/dbdata
+
 # profiling files
 chrome-profiler-events*.json
 speed-measure-plugin*.json
