Added .gitattributes to repo

--- a/dev/04_Development/demo02/docker-compose.yml
+++ b/dev/04_Development/demo02/docker-compose.yml
@@ -17,9 +17,12 @@ services:
       - MONGO_DB=$MONGO_DB
     ports:
       - "3000:3000"
+    volumes:
+      - .:/usr/src/app
+      - node_modules:/usr/src/app/node_modules
     networks:
       - app-network
-    command: ./wait-for.sh db:27017 -- /home/node/app/node_modules/.bin/nodemon server.js
+    command: ./wait-for.sh db:27017 -- /home/node/app/node_modules/.bin/nodemon server.js 
 
   db:
     image: mongo:4.1.8-xenial
@@ -35,10 +38,10 @@ services:
       - ./dbdata:/data/db
     networks:
       - app-network
-
 networks:
   app-network:
     driver: bridge
 
 volumes:
   dbdata:
+  node_modules:
