--- a/dev/04_Development/demo02/docker-compose.yml
+++ b/dev/04_Development/demo02/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   nodejs:
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: node-Dockerfile
     image: nodejs
     container_name: nodejs
     restart: unless-stopped
@@ -22,11 +22,14 @@ services:
       - node_modules:/usr/src/app/node_modules
     networks:
       - app-network
-    command: ./wait-for.sh db:27017 -- /home/node/app/node_modules/.bin/nodemon server.js 
+    command: ./wait-for.sh db:27017 -- /home/node/app/node_modules/.bin/nodemon server.js
 
   db:
-    image: mongo:4.1.8-xenial
-    container_name: db
+    build:
+      context: .
+      dockerfile: mongo-Dockerfile
+    image: mongodb
+    container_name: meandb
     restart: unless-stopped
     env_file: .env
     environment:
@@ -35,7 +38,7 @@ services:
     ports:
       - "27018:27017"
     volumes:
-      - ./dbdata:/data/db
+      - dbdata:/data/db
     networks:
       - app-network
 networks:
